Fix z-index of signup modal #LABTROYALC-94 @author Sergej

--- a/clicker_frontend/src/App.module.css
+++ b/clicker_frontend/src/App.module.css
@@ -26,7 +26,7 @@
     display: flex;
     padding: 10px;
     justify-content: space-between;
-    z-index: 10;
+    z-index: 30;
 }
 
 .main {
@@ -107,7 +107,7 @@
 }
 
 .modal {
-    z-index: 100;
+    z-index: 40;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -371,7 +371,8 @@ input[type=submit]:hover {
 }
 
 .gear_normal {
-    position: absolute;
+    overflow: hidden;
+    position: fixed;
     background-image: url("./assets/gear.png");
     background-color: transparent;
     background-position: center center;
